# genre-classifier-msd

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  README.md  deploy.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  cicd.yml
genre_classifier/: preprocess_common.py  utils.py
genre_classifier/blocks/: create_aws_credentials.py  create_s3_buckets.py
genre_classifier/flows/complete_training/: flow.py
genre_classifier/flows/ingest_data/: flow.py
genre_classifier/flows/model_monitoring/: flow.py
genre_classifier/flows/predict/: flow.py
genre_classifier/flows/preprocess/: flow.py
genre_classifier/flows/split_data/: flow.py
genre_classifier/flows/train/: flow.py
integration-tests/: docker-compose.yaml  test_integration.py
notebooks/: EDA.ipynb  Pipfile  README.md  Train.ipynb
prefect/blocks/: create_s3_buckets.py
prefect/first_flow/: flow.py  requirements.txt
prefect/flows/first_flow/: flow.py  requirements.txt
prefect/flows/ingest_data/: Dockerfile  flow.py  requirements.txt
prefect/flows/preprocess/: flow.py  requirements.txt
terraform/: .gitignore  .terraform.lock.hcl  README.md  data.tf  main.tf  prefect_instance.tf  storage.tf  variables.tf
terraform/templates/: install_prefect.tpl  mlflow_server.service.tpl  prefect_server.service.tpl  prefect_work_pool.service.tpl
tests/: conftest.py  test_integration.py  test_preprocess_common.py  test_utils.py
tests/flows/: test_train_flow.py
tests/integration/: test_integration.py
tests/unit/: test_preprocess_common.py
(+3 files in other folders)
